src/assets/styles/scss/components/landing/hero/title-area/_title-area.scss
/* _title-area.scss */

/* HeroTitleAreaContainer */

.hero-title-area {
  white-space: nowrap;
  position: absolute;
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: center;
  left: 115px;
  top: 275px;

  &__title-text {
    @include font-source-main(
      39px,
      46px,
      0.04em,
      3px,
      center,
      normal,
      500,
      #222222
    );
    mix-blend-mode: normal;
    @include responsive-font(5vw, 32px, 39px);
  }

  &__slogan {
    text-align: right;
  }

  &__slogan-text {
    @include font-source-body(
      22px,
      28px,
      0.06em,
      3px,
      false,
      false,
      false,
      #9e9eff
    );
    @include responsive-font(5vw, 18px, 22px);
  }

  &__eventInfo {
    position: absolute;
    text-align: left;
    left: 0;
    // top: 152px;
    top: 194px;
  }

  &__eventInfo-text {
    @include font-source-body(
      14px,
      14px,
      0.04em,
      3px,
      false,
      false,
      false,
      #adadad
    );
    position: absolute;
    width: 22vw;
    height: 64px;
    white-space: nowrap;
  }

  &__button {
    position: absolute;
    left: 0;
    // top: 266px;
    top: 310px;
    width: 183px;
    height: 46px;

    background-color: #6f6fe8;
    box-shadow: 0px 2px 6px #bfbfbf;
    border-radius: 23px;
  }

  &__button-text {
    @include font-source-body(
      14px,
      18px,
      0.07em,
      3px,
      center,
      false,
      false,
      #fffefe
    );
  }
}

/* Email Subscription Input Container */
div.hero-subscribe-to-email-list-container {
  height: 46px;
  width: 100%;

  display: flex;
  position: absolute;
  left: 0;
  top: 130px;
  text-align: center;

  input {
    all: unset;
    height: 100%;
    width: 75%;
    border-bottom: 1px solid #adadad;
    @include font-source-body(
      14px,
      14px,
      0.04em,
      3px,
      false,
      false,
      false,
      #adadad
    );
  }

  button {
    all: unset;
    height: 100%;
    width: 25%;
    background-color: #6f6fe8;
    border-radius: 23px 23px 23px 0;
    padding: 0 14px 0 10px;
    box-shadow: 0px 2px 6px #bfbfbf;
    @include font-source-body(
      14px,
      18px,
      0.07em,
      3px,
      center,
      false,
      false,
      #fffefe
    );
    cursor: pointer;
  }
}

/* NavigateToBottomContainer */

.navigate-to-bottom-container {
  position: absolute;
  left: -16px;
  // top: 362px;
  top: 394px;
  width: 66px;
  height: 66px;
  cursor: pointer;
}

.navigate-to-bottom-outer-circle {
  position: absolute;
  left: 0;
  top: 0;
}

.navigate-to-bottom-middle-circle {
  position: absolute;
  left: 11px;
  top: 11px;
}

.navigate-to-bottom-inner-circle {
  position: absolute;
  left: 21px;
  top: 21px;
}

.navigate-to-bottom-arrow {
  position: absolute;
  left: 25px;
  top: -5px;
}

